# GetOff

./: Cargo.toml  README.md
src/: app.rs  app_selection.rs  app_site_screen.rs  app_trigger_handling.rs  main.rs  timer_display.rs  title_screen.rs  ui.rs
