[package]
name = "get_off"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.42"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
system_shutdown = "4.0.1"
timer = "0.2.0"
tui = "0.19.0"
tui-input = "0.14.0"
tui-widgets = "0.4.1"
simple-string-patterns = "0.3.17"
clap = { version = "4.5.48", features = ["derive"] }
procfs = "0.18.0"
